Fix overlapping text in some cases Detected with album "Decksandrumsandrockandroll"

--- a/html_src/css/skin/default.css
+++ b/html_src/css/skin/default.css
@@ -355,6 +355,7 @@ width: auto;
 min-width: 5px;
 text-align: left;
 padding-left: 5px;
+word-break: break-all;
 }
 table.jukebox-search-table th{
 white-space: pre; /* For buttons column */
